feat: Add a comprehensive test suite for UI and database modules, introduce new UI dashboard and validation components, and update data management logic and dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-pandas
-google-generativeai
-python-dotenv
-matplotlib
-plotly
-requests
-pytest
+streamlit==1.47.0
+pandas==2.3.1
+google-generativeai==0.8.6
+python-dotenv==1.1.1
+plotly==6.2.0
+requests==2.32.5
+pytest==8.4.2
