--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,58 @@
-# Clé API Google Gemini
-# Obtenir une clé ici: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=votre_cle_ici
+# ⚠️ IMPORTANT: Ne jamais commiter ce fichier!
+# Copiez ce fichier en .env et remplissez vos vraies valeurs
+# Le fichier .env est dans .gitignore et ne doit jamais être traqué par git
+
+# ============================================
+# CLÉS API - INTELLIGENCE ARTIFICIELLE
+# ============================================
+
+# Google Gemini (Recommandé - gratuit)
+# Obtenir une clé: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=votre_cle_gemini_ici
+
+# OpenAI (ChatGPT)
+# Obtenir une clé: https://platform.openai.com/api-keys
+OPENAI_API_KEY=votre_cle_openai_ici
+
+# DeepSeek
+# Obtenir une clé: https://platform.deepseek.com/
+DEEPSEEK_API_KEY=votre_cle_deepseek_ici
+
+# Ollama (Local - 100% offline)
+# URL par défaut: http://localhost:11434
+OLLAMA_URL=http://localhost:11434
+
+# ============================================
+# CONFIGURATION IA
+# ============================================
+
+# Provider à utiliser: gemini, openai, deepseek, ollama
+AI_PROVIDER=gemini
+
+# Modèle à utiliser (dépend du provider)
+AI_MODEL_NAME=gemini-2.0-flash
+
+# ============================================
+# BASE DE DONNÉES (Optionnel)
+# ============================================
+
+# Chemin personnalisé vers la base SQLite (défaut: Data/finance.db)
+# DB_PATH=/chemin/personnalise/finance.db
+
+# ============================================
+# SÉCURITÉ
+# ============================================
+
+# Clé secrète pour le chiffrement des données sensibles (backups, exports)
+# Générer avec: openssl rand -hex 32
+# ENCRYPTION_KEY=votre_cle_de_32_caracteres_hex
+
+# ============================================
+# NOTIFICATIONS (Optionnel)
+# ============================================
+
+# Configuration pour les alertes email (si implémenté)
+# SMTP_SERVER=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=votre_email@gmail.com
+# SMTP_PASSWORD=votre_mot_de_passe_app
