🔒 Implémentation complète : Chiffrement, Cache, Validateurs - v3.5.0
SÉCURITÉ:
- modules/encryption.py : Chiffrement AES-256 avec Fernet
- Clé dérivée via PBKDF2HMAC (100k iterations)
- Chiffrement automatique champs sensibles (notes, beneficiary)
- Fonction migrate_to_encryption() pour migration données

PERFORMANCE:
- modules/cache_multitier.py : Cache mémoire + disque
- LRU eviction, TTL support
- Décorateur @cached pour fonctions
- Stats hit/miss rate

VALIDATION:
- Intégration validateurs dans pages/1_Import.py
- Validation + sanitization avant import CSV
- Error tracking avec capture_exception

MONITORING:
- Initialisation Sentry dans app.py
- Configuration via SENTRY_DSN
- Environment tracking (dev/staging/prod)

TESTS:
- tests/test_encryption.py : 11 tests
- tests/test_cache_multitier.py : 20 tests
- Total: 246 tests (+20)

DÉPENDANCES:
+ cryptography==44.0.0 (AES-256)
+ diskcache==5.6.3 (cache disque)

Configuration .env.example mise à jour avec:
- ENCRYPTION_KEY
- SENTRY_DSN
- ENVIRONMENT

--- a/.env.example
+++ b/.env.example
@@ -43,9 +43,17 @@ AI_MODEL_NAME=gemini-2.0-flash
 # SÉCURITÉ
 # ============================================
 
-# Clé secrète pour le chiffrement des données sensibles (backups, exports)
-# Générer avec: openssl rand -hex 32
-# ENCRYPTION_KEY=votre_cle_de_32_caracteres_hex
+# Clé secrète pour le chiffrement AES-256 des données sensibles (notes, beneficiary)
+# Générer avec: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# OU: openssl rand -base64 32
+ENCRYPTION_KEY=votre_cle_fernet_ici
+
+# Sentry DSN pour le monitoring d'erreurs (optionnel)
+# Obtenir sur: https://sentry.io/signup/
+# SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
+
+# Environment: development, staging, production
+ENVIRONMENT=development
 
 # ============================================
 # NOTIFICATIONS (Optionnel)
